# image-displayer

./: .gitignore  CMakeLists.txt  README.md  run.sh
includes/: menu.h  reader.h  window.h
src/: main.c
tools/: menu.c  reader.c  window.c
